--- a/app/src/main/res/drawable/dotted.xml
+++ b/app/src/main/res/drawable/dotted.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/cardview_dark_background"
+                android:color="#cdcdcd"
                 android:dashGap="0dp"
                 android:dashWidth="1dp" />
 
