--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3f72b5</color>
+    <color name="colorPrimaryDark">#30649f</color>
+    <color name="colorAccent">#ff4340</color>
+
+    <color name="my_blue">#2691e2</color>
+    <color name="my_green">#38e126</color>
+    <color name="my_yellow">#dacb25</color>
+
 </resources>
