finish first trip routing

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="my_blue">#2691e2</color>
     <color name="my_green">#38e126</color>
     <color name="my_yellow">#dacb25</color>
+    <color name="my_red">#da2525</color>
 
 </resources>
